One more commit

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,12 @@
     <link rel="stylesheet" href="output.css" />
     <title>Document</title>
   </head>
-  <body class="bg-[#1C2230] px-3 py-7 text-lg">
-    <div class="flex items-center justify-between">
-      <img src="/images/logo.svg" alt="" class="w-[8rem] md:w-[11rem]" />
+  <body class="bg-[#1C2230]  text-lg">
+    <div class="px-3 py-7">
+    <div class="flex items-center  justify-between ">
+      <img src="/images/logo.svg" alt="" class="w-[7rem] md:w-[10rem]" />
 
-      <div class="text-white grid grid-flow-col">
+      <div class="text-white grid grid-flow-col pt-1 md:text-base text-xs">
         <a href="#" class="px-6">Features</a>
         <a href="#" class="px-6">Team</a>
         <a href="#" class="px-6">Sign In</a>
@@ -110,7 +111,7 @@
     <div class="px-12 py-28  text-white">
         <img src="/images/bg-quotes.png" alt="">
 
-        <div class="  grid md:grid-cols-3 gap-12 justify-center items-center">
+        <div class="  grid lg:grid-cols-3 gap-12 justify-center items-center">
 
         <div class="bg-[#21293C] w-[370px] px-5 py-7 mr-6">
             <p class=" mb-8">Fylo has improved our team productivity by an order of magnitude. Since making switch our team has become a well-oiled collaboration machine.</p>            
@@ -160,12 +161,42 @@
     </div>
     </div>
 
-    <!-- <div>
-        <h1>Get early access toay</h1>
-        <p>It only takes a minute to sign up and our free tier is extremely generous. If you have any questions, our support team would be happy to help you.</p>
-        <input type="text">
-        <button></button>
-    </div> -->
+    <div class="  flex md:flex-col items-center  justify-center align-center">
+      <div class=" bg-[#21293C] text-white md:w-[700px] w-[500px] px-8 p-6 text-center rounded-md">
+        <h1 class=" text-3xl font-bold pb-5">Get early access today</h1>
+        <p class="  pb-5">It only takes a minute to sign up and our free tier is extremely generous. If you have any questions, our support team would be happy to help you.</p>
+        <div class=" flex gap-4 p-2 md:flex-row flex-col">
+        <input type="text" placeholder="email@example.com" class=" md:w-full  rounded-3xl py-6 h-8 text-center">
+        <button class="  bg-[#42B0C1] rounded-3xl md:w-[300px] py-[6px]">Get Started for Free</button>
+      </div>
+      </div>
+      </div>
+    </div>
+
+      <div class=" bg-[#0C1524] px-16 py-5  m-0">
+        <div> 
+          <img src="/images/logo.svg" alt="" class="w-[7rem] md:w-[8rem] mb-12 mt-10" />
+          <div class=" text-white grid md:grid-cols-3 gap-5">
+            <div class=" w-[250px]">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas necessitatibus hic fuga nam, corporis aliquid laboriosam minus aperiam dolore officiis?</div>
+            <div>
+          <ul>
+              <li>About</li>
+              <li>Jobs</li>
+              <li>Press</li>
+              <li>Blogs</li>
+            </ul>
+            </div>
+
+            <div>
+              <ul>
+              <li>Contact Us</li>
+            <li>Terms</li>
+          <li>Privacy</li>
+        </ul> 
+        </div>
+          </div>
+        </div>
+      </div>
 
 
   </body>
