--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <body class="bg-[#1C2230]  text-lg">
     <div class="px-3 py-7">
     <div class="flex items-center  justify-between ">
-      <img src="/images/logo.svg" alt="" class="w-[7rem] md:w-[10rem]" />
+      <img src="images/logo.svg" alt="" class="w-[7rem] md:w-[10rem]" />
 
       <div class="text-white grid grid-flow-col pt-1 md:text-base text-xs">
         <a href="#" class="px-6">Features</a>
@@ -19,7 +19,7 @@
     </div>
     <div class="px-6 pt-20 text-center text-white">
       <div class="flex justify-center items-center">
-        <img src="/images/illustration-intro.png" alt="" />
+        <img src="images/illustration-intro.png" alt="" />
       </div>
       <h1 class="text-[34px] lg:px-[15rem] font-bold py-4 leading-10">
         All your files in one secure location, accessible anywhere.
@@ -40,7 +40,7 @@
       <div>
         <div class="text-white flex justify-center items-center flex-col py-10">
           <div>
-            <img src="/images/icon-access-anywhere.svg" alt="" />
+            <img src="images/icon-access-anywhere.svg" alt="" />
           </div>
           <div class="text-center px-10 pt-4">
             <h1 class=" text-2xl font-bold">Access your files, anywhere</h1>
@@ -53,7 +53,7 @@
 
         <div class="text-white flex justify-center items-center flex-col py-10">
             <div>
-          <img src="/images/icon-security.svg" alt="" />
+          <img src="images/icon-security.svg" alt="" />
         </div>
         <div class="text-center px-10 pt-4">
           <h1  class=" text-2xl font-bold">Security you can trust</h1>
@@ -68,7 +68,7 @@
       <div>
         <div class="text-white flex justify-center items-center flex-col py-10">
           <div>
-            <img src="/images/icon-collaboration.svg" alt="" />
+            <img src="images/icon-collaboration.svg" alt="" />
           </div>
           <div class="text-center px-10 pt-4">
             <h1 class=" text-2xl font-bold">Real time collaboration with friends</h1>
@@ -80,7 +80,7 @@
 
         <div class="text-white flex justify-center items-center flex-col py-10">
             <div>
-          <img src="/images/icon-any-file.svg" alt="" />
+          <img src="images/icon-any-file.svg" alt="" />
         </div>
         <div class="text-center px-10 pt-4">
           <h1 class=" text-2xl font-bold">Security you can trust</h1>
@@ -94,7 +94,7 @@
 
     <div class=" px-12 text-white py-5 md:grid grid-cols-2 items-center">
         <div class=" py-5">
-            <img src="/images/illustration-stay-productive.png" alt="">
+            <img src="images/illustration-stay-productive.png" alt="">
         </div>
 
         <div>
@@ -109,7 +109,7 @@
     </div>
 
     <div class="px-12 py-28  text-white">
-        <img src="/images/bg-quotes.png" alt="">
+        <img src="images/bg-quotes.png" alt="">
 
         <div class="  grid lg:grid-cols-3 gap-12 justify-center items-center">
 
@@ -117,7 +117,7 @@
             <p class=" mb-8">Fylo has improved our team productivity by an order of magnitude. Since making switch our team has become a well-oiled collaboration machine.</p>            
             <div class=" flex items-center">
                 <div>
-                    <img src="/images/profile-1.jpg" alt="" class=" rounded-full w-10">
+                    <img src="images/profile-1.jpg" alt="" class=" rounded-full w-10">
                 </div>
                 <div class=" pl-4">
                    <p class=" font-semibold"> Satish Patel</p>
@@ -133,7 +133,7 @@
             
             <div class=" flex items-center">
                 <div>
-                    <img src="/images/profile-2.jpg" alt="" class=" rounded-full w-10">
+                    <img src="images/profile-2.jpg" alt="" class=" rounded-full w-10">
                 </div>
                 <div class=" pl-4">
                    <p class=" font-semibold"> Bruce McKenzie</p>
@@ -149,7 +149,7 @@
             
             <div class=" flex items-center">
                 <div>
-                    <img src="/images/profile-3.jpg" alt="" class=" rounded-full w-10">
+                    <img src="images/profile-3.jpg" alt="" class=" rounded-full w-10">
                 </div>
                 <div class=" pl-4">
                    <p class=" font-semibold"> Iva Boyd</p>
@@ -175,7 +175,7 @@
 
       <div class=" bg-[#0C1524] px-16 py-5  m-0">
         <div> 
-          <img src="/images/logo.svg" alt="" class="w-[7rem] md:w-[8rem] mb-12 mt-10" />
+          <img src="images/logo.svg" alt="" class="w-[7rem] md:w-[8rem] mb-12 mt-10" />
           <div class=" text-white grid md:grid-cols-3 gap-5">
             <div class=" w-[250px]">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas necessitatibus hic fuga nam, corporis aliquid laboriosam minus aperiam dolore officiis?</div>
             <div>
